# money-tracking

./: .gitignore  API_ENDPOINTS_REFERENCE.md  AUTHENTICATION_IMPROVEMENTS.md  LICENSE  PHASE10_DEPLOYMENT_GUIDE.md  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE5_README.md  PHASE5_SUMMARY.md  PHASE6_README.md  PHASE7_README.md  PHASE8_README.md  README.md  build.sh  env.example  manage.py  optimize_performance.py  pyproject.toml  railway-start.sh  railway.toml  requirements.txt  start.sh  test_api.py  test_api_endpoints.py  test_calendar_phase4.py  test_calendar_phase7.py  test_chat_phase5.py  test_dashboard_logic.js  test_integration.py  test_phase7_simple.py  test_phase8_future_me.py  test_phase9_meme.py  test_ui_fixes.js  test_voice_date_phase6.py
ai_chat/: admin.py  apps.py  date_parser.py  gemini_service.py  meme_generator.py  models.py  serializers.py  translation_utils.py  urls.py  views.py  voice_processor.py
authentication/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
base/: expense_tracker_app.html  plan.md  prompt.md
docs/: AUTHENTICATION_IMPROVEMENTS.md  BANK_INTEGRATION_TESTING_GUIDE.md  CHANGELOG.md  CURRENCY_PARSING_IMPROVEMENTS.md  CURRENCY_PARSING_RAILWAY_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GMAIL_BANK_INTEGRATION_PLAN.md  GOOGLE_OAUTH_SETUP.md  LOGIN_IMPLEMENTATION_PLAN.md  MULTI_USER_MIGRATION_PLAN.md  OAUTH_TROUBLESHOOTING_GUIDE.md  PRODUCTION_DEPLOYMENT_FIX.md  QUICK_DEPLOY_GUIDE.md  railway-env-fix.txt
expense_tracker/: debug_static.py  health.py  middleware.py  urls.py  wsgi.py
scripts/: build.sh  migrate.sh  (+5 more)
(+71 files in other folders)
