[project]
name = "expense-tracker-app"
version = "0.1.0"
description = "AI-powered expense tracking web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "django-cors-headers>=4.3.0",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
    "google-generativeai>=0.3.0",
    "dj-database-url>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "coverage>=7.0.0",
    "django-debug-toolbar>=4.2.0",
]
production = [
    "sentry-sdk[django]>=1.32.0",
    "redis>=4.6.0",
    "celery>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_tracker", "transactions", "ai_chat"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "expense_tracker.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"] 